[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/main/world/creature/Creature.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/world/creature/spira.gd" type="Script" id=2]
[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=3]
[ext_resource path="res://src/main/ui/CheatCodeDetector.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/ui/MoneyLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/ui/SettingsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/main/ui/FpsLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/main/ui/VersionLabel.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/main/ui/chat/ChatUi.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/ui/overworld-ui.gd" type="Script" id=10]
[ext_resource path="res://src/main/world/glowy-sphere.gd" type="Script" id=11]
[ext_resource path="res://src/main/world/ChatIcon.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/main/fuzzy-circle-128.png" type="Texture" id=13]
[ext_resource path="res://src/main/world/environment/ground-library.tres" type="TileSet" id=14]
[ext_resource path="res://src/main/world/environment/GrassTuft.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/main/world/environment/grass-tufts.gd" type="Script" id=16]
[ext_resource path="res://src/main/world/environment/obstacle-library.tres" type="TileSet" id=17]
[ext_resource path="res://src/main/world/creature/CreatureShadow.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/main/world/environment/block-shadow.png" type="Texture" id=19]
[ext_resource path="res://src/main/world/environment/obstacle-shadows.gd" type="Script" id=20]
[ext_resource path="res://src/main/world/overworld-camera.gd" type="Script" id=21]
[ext_resource path="res://src/main/world/screwport-texrect.gd" type="Script" id=22]
[ext_resource path="res://src/main/world/OverworldTouchButtons.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/main/world/creature/ebe.gd" type="Script" id=24]
[ext_resource path="res://src/main/world/overworld-bg.gd" type="Script" id=25]

[sub_resource type="TileSet" id=1]
0/name = "block-shadow.png 0"
0/texture = ExtResource( 19 )
0/tex_offset = Vector2( 0, 20 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 212, 212 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("World/Ground/Shadows/Viewport")

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28, 14 )

[node name="Overworld" type="Node"]

[node name="Bg" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Bg"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.423529, 0.262745, 0.192157, 1 )
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World" type="Node" parent="."]

[node name="Ground" type="Node2D" parent="World"]

[node name="GroundMap" type="TileMap" parent="World/Ground"]
mode = 1
tile_set = ExtResource( 14 )
cell_size = Vector2( 128, 64 )
cell_tile_origin = 1
centered_textures = true
format = 1
tile_data = PoolIntArray( -327677, 1, 0, -327676, 1, 0, -327675, 1, 0, -327667, 1, 0, -327666, 1, 0, -327665, 1, 0, -262144, 1, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262129, 1, 0, -196608, 1, 0, -196607, 0, 0, -196606, 0, 0, -196605, 22, 0, -196604, 22, 0, -196603, 22, 0, -196602, 22, 0, -196601, 22, 0, -196600, 22, 0, -196599, 22, 0, -196598, 22, 0, -196597, 22, 0, -196596, 22, 0, -196595, 0, 0, -196594, 0, 0, -196593, 1, 0, -131072, 1, 0, -131071, 0, 0, -131070, 22, 0, -131069, 22, 0, -131068, 22, 0, -131067, 0, 0, -131066, 22, 0, -131065, 0, 0, -131064, 22, 0, -131063, 0, 0, -131062, 22, 0, -131061, 0, 0, -131060, 22, 0, -131059, 22, 0, -131058, 0, 0, -131057, 1, 0, -65536, 1, 0, -65535, 0, 0, -65534, 22, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 21, 2, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 22, 0, -65522, 0, 0, -65521, 1, 0, 0, 1, 0, 1, 0, 0, 2, 22, 0, 3, 21, 65539, 4, 21, 131073, 5, 21, 131073, 6, 21, 131073, 7, 21, 131075, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 22, 0, 14, 0, 0, 15, 1, 0, 65536, 1, 0, 65537, 0, 0, 65538, 22, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 21, 65540, 65544, 21, 131073, 65545, 21, 131073, 65546, 21, 65538, 65547, 0, 0, 65548, 0, 0, 65549, 22, 0, 65550, 0, 0, 65551, 1, 0, 131072, 1, 0, 131073, 0, 0, 131074, 22, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 21, 65540, 131083, 21, 65536, 131084, 0, 0, 131085, 22, 0, 131086, 0, 0, 131087, 1, 0, 196608, 1, 0, 196609, 0, 0, 196610, 22, 0, 196611, 22, 0, 196612, 0, 0, 196613, 22, 0, 196614, 21, 0, 196615, 22, 0, 196616, 0, 0, 196617, 22, 0, 196618, 0, 0, 196619, 22, 0, 196620, 22, 0, 196621, 22, 0, 196622, 0, 0, 196623, 1, 0, 262144, 1, 0, 262145, 0, 0, 262146, 0, 0, 262147, 22, 0, 262148, 22, 0, 262149, 22, 0, 262150, 22, 0, 262151, 22, 0, 262152, 22, 0, 262153, 22, 0, 262154, 22, 0, 262155, 22, 0, 262156, 22, 0, 262157, 0, 0, 262158, 0, 0, 262159, 1, 0, 327680, 1, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393231, 1, 0 )

[node name="Shadows" type="Node2D" parent="World/Ground"]

[node name="Viewport" type="Viewport" parent="World/Ground/Shadows"]
size = Vector2( 1024, 600 )
transparent_bg = true

[node name="ObstacleShadows" type="TileMap" parent="World/Ground/Shadows/Viewport"]
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 64 )
cell_tile_origin = 1
centered_textures = true
format = 1
tile_data = PoolIntArray( -131070, 0, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0 )
script = ExtResource( 20 )
obstacle_map_path = NodePath("../../../../Obstacles/ObstacleMap")

[node name="SpiraShadow" parent="World/Ground/Shadows/Viewport" instance=ExtResource( 18 )]
position = Vector2( 0, 0 )
creature_path = NodePath("../../../../Obstacles/Spira")
shadow_scale = Vector2( 0.4, 0.4 )

[node name="BortShadow" parent="World/Ground/Shadows/Viewport" instance=ExtResource( 18 )]
position = Vector2( 0, 0 )
creature_path = NodePath("../../../../Obstacles/Bort")
shadow_scale = Vector2( 0.4, 0.4 )

[node name="EbeShadow" parent="World/Ground/Shadows/Viewport" instance=ExtResource( 18 )]
position = Vector2( 0, 0 )
creature_path = NodePath("../../../../Obstacles/Ebe")
shadow_scale = Vector2( 0.4, 0.4 )

[node name="BoatriciaShadow" parent="World/Ground/Shadows/Viewport" instance=ExtResource( 18 )]
position = Vector2( 0, 0 )
creature_path = NodePath("../../../../Obstacles/Boatricia")
shadow_scale = Vector2( 0.4, 0.4 )

[node name="ScrewportTexrect" type="TextureRect" parent="World/Ground/Shadows"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
texture = SubResource( 2 )
flip_v = true
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Obstacles" type="YSort" parent="World"]

[node name="ObstacleMap" type="TileMap" parent="World/Obstacles"]
mode = 1
tile_set = ExtResource( 17 )
cell_size = Vector2( 128, 64 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -196607, 0, 0, -196606, 0, 0, -196595, 0, 0, -196594, 0, 0, -131071, 0, 0, -131058, 0, 0, -65535, 0, 0, -65522, 0, 0, 1, 0, 0, 14, 0, 0, 65537, 0, 0, 65542, 0, 0, 65550, 0, 0, 131073, 0, 0, 131086, 0, 0, 196609, 0, 0, 196622, 0, 0, 262145, 0, 0, 262146, 0, 0, 262157, 0, 0, 262158, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0 )

[node name="GrassTufts" type="YSort" parent="World/Obstacles"]
script = ExtResource( 16 )
ground_map_path = NodePath("../../Ground/GroundMap")
GrassTuftScene = ExtResource( 15 )

[node name="Spira" parent="World/Obstacles" instance=ExtResource( 1 )]
position = Vector2( 150, 150 )
script = ExtResource( 2 )
creature_id = "spira"

[node name="Bort" parent="World/Obstacles" instance=ExtResource( 1 )]
position = Vector2( 313.439, 344.721 )
creature_id = "bort"

[node name="Ebe" parent="World/Obstacles" instance=ExtResource( 1 )]
position = Vector2( 444.163, 149.951 )
script = ExtResource( 24 )
creature_id = "ebe"
overworld_ui_path = NodePath("../../../Ui/OverworldUi")

[node name="MoveTimer" type="Timer" parent="World/Obstacles/Ebe"]
wait_time = 0.9
autostart = true

[node name="Boatricia" parent="World/Obstacles" instance=ExtResource( 1 )]
position = Vector2( 652.587, 320.111 )
creature_id = "boatricia"

[node name="GlowySphere" type="KinematicBody2D" parent="World/Obstacles"]
position = Vector2( 731.162, 206.052 )
script = ExtResource( 11 )

[node name="ChatIcon" parent="World/Obstacles/GlowySphere" instance=ExtResource( 12 )]
bubble_type = 2
right_side = false

[node name="Sprite" type="Sprite" parent="World/Obstacles/GlowySphere"]
position = Vector2( 0, -32 )
scale = Vector2( 0.539476, 0.539476 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Obstacles/GlowySphere"]
shape = SubResource( 3 )

[node name="Camera" type="Camera2D" parent="World"]
position = Vector2( 150, 150 )
current = true
smoothing_enabled = true
script = ExtResource( 21 )
spira_path = NodePath("../Obstacles/Spira")
overworld_ui_path = NodePath("../../Ui/OverworldUi")

[node name="Tween" type="Tween" parent="World/Camera"]

[node name="Ui" type="CanvasLayer" parent="."]

[node name="OverworldUi" type="Control" parent="Ui"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Labels" type="Control" parent="Ui/OverworldUi"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_min_size = Vector2( 1024, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoutheastLabels" type="VBoxContainer" parent="Ui/OverworldUi/Labels"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -502.0
margin_top = -290.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 3 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsLabel" parent="Ui/OverworldUi/Labels/SoutheastLabels" instance=ExtResource( 7 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 246.0
margin_right = 502.0
margin_bottom = 266.0

[node name="VersionLabel" parent="Ui/OverworldUi/Labels/SoutheastLabels" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 260.0
margin_right = 492.0
margin_bottom = 280.0

[node name="NorthwestLabels" type="VBoxContainer" parent="Ui/OverworldUi/Labels"]
margin_left = 10.0
margin_top = 10.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" parent="Ui/OverworldUi/Labels/NorthwestLabels" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 502.0
margin_bottom = 32.0
compact = true

[node name="ChatUi" parent="Ui/OverworldUi" instance=ExtResource( 9 )]
visible = false
margin_bottom = 1.99976

[node name="TouchButtons" parent="Ui/OverworldUi" instance=ExtResource( 23 )]

[node name="CheatCodeDetector" parent="Ui/OverworldUi" instance=ExtResource( 4 )]
codes = [ "bigfps" ]

[node name="SettingsMenu" parent="Ui/OverworldUi" instance=ExtResource( 6 )]
quit_text = "Save + Quit"
[connection signal="timeout" from="World/Obstacles/Ebe/MoveTimer" to="World/Obstacles/Ebe" method="_on_MoveTimer_timeout"]
[connection signal="chat_ended" from="Ui/OverworldUi" to="Ui/OverworldUi/TouchButtons" method="_on_OverworldUi_chat_ended"]
[connection signal="chat_ended" from="Ui/OverworldUi" to="World/Camera" method="_on_OverworldUi_chat_ended"]
[connection signal="chat_started" from="Ui/OverworldUi" to="Ui/OverworldUi/TouchButtons" method="_on_OverworldUi_chat_started"]
[connection signal="chat_started" from="Ui/OverworldUi" to="World/Camera" method="_on_OverworldUi_chat_started"]
[connection signal="showed_chat_choices" from="Ui/OverworldUi" to="World/Obstacles/Spira" method="_on_OverworldUi_showed_chat_choices"]
[connection signal="chat_event_played" from="Ui/OverworldUi/ChatUi" to="Ui/OverworldUi" method="_on_ChatUi_chat_event_played"]
[connection signal="pop_out_completed" from="Ui/OverworldUi/ChatUi" to="Ui/OverworldUi" method="_on_ChatUi_pop_out_completed"]
[connection signal="showed_choices" from="Ui/OverworldUi/ChatUi" to="Ui/OverworldUi" method="_on_ChatUi_showed_choices"]
[connection signal="cheat_detected" from="Ui/OverworldUi/CheatCodeDetector" to="Ui/OverworldUi/Labels/SoutheastLabels/FpsLabel" method="_on_CheatCodeDetector_cheat_detected"]
[connection signal="hide" from="Ui/OverworldUi/SettingsMenu" to="Ui/OverworldUi/TouchButtons" method="_on_SettingsMenu_hide"]
[connection signal="quit_pressed" from="Ui/OverworldUi/SettingsMenu" to="Ui/OverworldUi" method="_on_SettingsMenu_quit_pressed"]
[connection signal="show" from="Ui/OverworldUi/SettingsMenu" to="Ui/OverworldUi/TouchButtons" method="_on_SettingsMenu_show"]
